<resources>
    <string name="app_name">Wambugu</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="txthome">Welcome</string>

    <string name="txtfirstname">First Name</string>
    <string name="txtlastname">Last Name</string>
    <string name="txtPhone">Phone</string>
    <string name="txtEmail">Email Address</string>
    <string name="txtPass">Password</string>
    <string name="txtCreate">Create Account</string>


    <string name="txtusername">UserName</string>
    <string name="txtPassword">Password</string>
    <string name="txtLogin">Login</string>
    <string name="txtSign">If you don't have an Acc please SignUp</string>
    <string name="txtCreateAcc">Create Account</string>


</resources>

