<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/paddingTop1"
    >

    <EditText
        android:paddingTop="@dimen/paddingTop2"
        android:id="@+id/firstname"
        android:layout_width="@dimen/width1"
        android:layout_height="wrap_content"
        android:hint="@string/txtfirstname"
        android:inputType="text"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="@dimen/width1"
        android:layout_height="wrap_content"
        android:hint="@string/txtlastname"
        android:inputType="text"
        android:layout_below="@+id/firstname"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="@dimen/width1"
        android:layout_height="wrap_content"
        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/lastname"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/phone"
        android:layout_width="@dimen/width1"
        android:layout_height="wrap_content"
        android:hint="@string/txtPhone"
        android:inputType="phone"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/width1"
        android:layout_height="wrap_content"
        android:hint="@string/txtPass"
        android:inputType="textPassword"
        android:layout_below="@+id/phone"
        android:layout_centerHorizontal="true"

        />

    <Button
        android:id="@+id/ca"
        android:layout_width="@dimen/width1"
        android:layout_height="wrap_content"
        android:text="@string/txtCreate"
        android:layout_below="@+id/password"
        android:background="@color/SignUp"
        android:layout_centerInParent="true"
        />

</RelativeLayout>


